--- a/gjk-spring-boot-starters/pom.xml
+++ b/gjk-spring-boot-starters/pom.xml
@@ -12,6 +12,9 @@
     <artifactId>gjk-spring-boot-starters</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>gjk-file-storage-spring-boot-starter</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
