--- a/gjk-spring-boot-starters/gjk-log-spring-boot-starters/src/main/resources/application.properties
+++ b/gjk-spring-boot-starters/gjk-log-spring-boot-starters/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-# ?? controller ????
-ykc.log.controller.enable=true
-ykc.log.controller.ignore-get-method=false
-ykc.log.controller.record-response=false
-# ????? feign ??
-ykc.log.feign.enable=true
-ykc.log.feign.record-response=false
-# feign ????
+#  controller log ??
+gjk.log.controller.enable=true
+gjk.log.controller.ignore-get-method=false
+gjk.log.controller.record-response=false
+#  feign log ??
+gjk.log.feign.enable=true
+gjk.log.feign.record-response=false
+# feign ??????
 feign.client.config.default.logger-level=FULL
 # ????????
-logging.level.com.ykc=INFO
+logging.level.com.gjk=INFO
 logging.level.druid.sql.Statement=ERROR
