--- a/gjk-dependencies-parent/pom.xml
+++ b/gjk-dependencies-parent/pom.xml
@@ -403,12 +403,12 @@
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
-            <name>ykc_repostiory-releases</name>
+            <name>gjk_repostiory-releases</name>
             <url>http://172.16.98.176:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
-            <name>ykc_repostiory-snapshots</name>
+            <name>gjk_repostiory-snapshots</name>
             <url>http://172.16.98.176:8081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
