--- a/gjk-dependencies-parent/gjk-common-dependencies/pom.xml
+++ b/gjk-dependencies-parent/gjk-common-dependencies/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>gjk-common-dependencies</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>GJK 基础二方包依赖</description>
+    <modules>
+        <module>../../gjk-component-examples</module>
+    </modules>
+
     <packaging>pom</packaging>
 
 
@@ -87,4 +91,36 @@
             <artifactId>micrometer-jvm-extras</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <showWarnings>true</showWarnings>
+                    <compilerArgs>
+                        <compilerArg>-parameters</compilerArg>
+                    </compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
